# saco-dictation-tool

./: .gitignore  AGENTS.md  Cargo.toml  README.md
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: qwen3-asr-flash-benchmark-2026-03-11.md  tech-spec-global-playback-auto-pause-during-recording.md  tech-spec-switch-sttd-to-alibaba-qwen3-asr-flash.md
config/: sttd.env.example  sttd.example.toml  sttd.service  whisper-server.service
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  (+1 more)
crates/sttctl/: Cargo.toml
crates/sttctl/src/: main.rs
crates/sttd/: Cargo.toml
crates/sttd/src/: debug_wav.rs  lib.rs  main.rs  playback.rs  runtime_pipeline.rs  state.rs
crates/sttd/src/audio/: capture.rs  format.rs  mod.rs
crates/sttd/src/injection/: clipboard.rs  mod.rs  wtype.rs
crates/sttd/src/ipc/: mod.rs  server.rs
crates/sttd/src/provider/: mod.rs  openai_compatible.rs  openrouter.rs  whisper_local.rs  whisper_server.rs
crates/sttd/tests/: device_recovery.rs  ipc_flow.rs  mode_transitions.rs  provider_contract.rs  release_readiness_docs.rs  systemd_service.rs
docs/: AC_TRACEABILITY.md  CHANGE_LEDGER.md  api-contracts-sttd.md  architecture-common.md  architecture-patterns.md  architecture-sttctl.md  architecture-sttd.md  component-inventory-common.md  component-inventory-sttctl.md  component-inventory-sttd.md  comprehensive-analysis-common.md  comprehensive-analysis-sttctl.md  comprehensive-analysis-sttd.md  contribution-guide.md  contribution-guidelines.md  critical-folders-summary.md  data-models-sttd.md  deployment-configuration.md  deployment-guide.md  development-guide-common.md  development-guide-sttctl.md  development-guide-sttd.md  development-instructions.md  documentation-validation-report.md  existing-documentation-inventory.md  hyprland.md  index.md  integration-architecture.md  openrouter-contract.md  project-overview.md  project-parts-metadata.json  project-parts.json  project-scan-report.json  project-structure.md  release-go-no-go-checklist.md  source-tree-analysis.md  technology-stack.md  user-provided-context.md
docs/.archive/: project-scan-report-20260304T161419Z.json
docs/verification/: ac1-ac6-ac10-ac12-closure-2026-03-04.md  ac13-systemd-user-service-2026-03-04.md
(+1 files in other folders)
