[package]
name = "sttctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
common = { path = "../common" }
sttd = { path = "../sttd" }
tokio.workspace = true

[lints]
workspace = true
